updated a couple parts. added the mines, and the ability to smelt the ores

--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@
 	display:none;
 }
 
+#marketmenu {
+	display:none;
+}
+
+#minesmenu {
+	display:none;
+}
+
 /*set generated imgs to reasonable size*/
 #copper_bar {
 	width:50px;
