--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
 
 #blacksmithmenu {
 	display:none;
+	text-align:center;
 }
 
 #marketmenu {
@@ -51,6 +52,16 @@
 }
 
 #copper_ore {
+	width:50px;
+	height:50px;
+	transition-delay: 0ms;
+}
+
+#copper_ore::hover {
+
+}
+
+#menuitems {
 	width:50px;
 	height:50px;
 }
@@ -74,3 +85,20 @@
 	width:904px;
 	height:568px;
 }
+
+#barsneeded {
+	text-align:center;
+	font-color:light green;
+	font-size:1em;
+}
+
+/* border for tables */
+table, th, td {
+	border: 1px solid black;
+	padding: 5px;
+}
+
+#copperswordquantity {
+	text-align:center;
+}
+
